Revert "Fix alignment display bug in Safari browsers"
This reverts commit 8798c6521e9acbde7b53d80a048ebb6e565f6633.

Iwan says:

	[... ] the "Fixed width font" on the computer of the user
	who originally reported the problem got set to "Arial" which
	obviously is no monospace font. In addition several people on
	the net (google "monospace safari") reported inconsistencies
	with font-family monospace. Therefore I misinterpreted a local
	problem. My apologies.	What is interesting though, is that
	readability of "Courier New" is extremely different between
	Gnome and KDE. One should keep this in mind for the future.

--- a/public/stylesheets/styles_munich.css
+++ b/public/stylesheets/styles_munich.css
@@ -584,7 +584,7 @@ div.alignres {
 
 pre {
   font-size: 11px;
-  font-family: Courier New,monospace;
+  font-family: monospace;
   margin: 0;
   padding: 0;
 }
