--- a/public/stylesheets/styles_tuebingen.css
+++ b/public/stylesheets/styles_tuebingen.css
@@ -602,7 +602,7 @@ div.alignres {
 
 pre {
   font-size: 11px;
-  font-family: Courier New,monospace;
+  font-family: monospace;
   margin: 0;
   padding: 0;
 }
